[package]
name = "egui_example"
version = "0.2.0"
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
edition = "2021"

[dependencies]
egui-wgpu = "0.19"
pollster = "0.2"
egui = "0.19"
wgpu = "0.13"
winit = "0.27"
egui_demo_lib = "0.19"

[dependencies.egui-winit]
version = "0.19"
# Required for compiling to WASM
default-features = false

# Required for compiling to WASM
# Note that you also need RUSTFLAGS=--cfg=web_sys_unstable_apis
[dependencies.getrandom]
features = ["js"]
